Thread-safe -ing + improvements
* Added SQLite connection pool via HickaryCP
* Made code Thread-safe in many places
* Fix tests

Signed-off-by: Alex Lourie <alex.lourie@zepben.com>